--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "../../base.tsconfig.json",
+    "extends": "./base.tsconfig.json",
     // NOTE: Everything except what you want compiled into JS should be in the exclusions.
     "compilerOptions": {
         "outDir": "./dist"
