--- a/.gitignore
+++ b/.gitignore
@@ -67,8 +67,7 @@ dist
 .idea
 
 # Release folders
-packages/*/dist
-packages/generator/renderedTemplates/
+renderedTemplates
 .vscode
 updateApiTmpDir
 
