--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "dist",
     "images",
     "README.md",
-    "APICLIENTS.md",
     "LICENSE.txt"
   ],
   "scripts": {
@@ -22,15 +21,13 @@
     "lint:dev": "eslint . --ext .ts --fix",
     "pretest": "npm run lint && npm run depcheck",
     "build": "npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
-    "test": "nyc mocha \"test/**/*.test.ts\" --reporter=xunit --reporter-options output=../../reports/generator.xml",
-    "test:debug": "nyc mocha \"test/**/*.test.ts\"",
-    "doc": "typedoc --mode modules --out ../../docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"  && cp CHANGELOG.md ../../docs",
-    "clean:node": "rm -rf node_modules",
-    "clean:all": "npm run clean:node",
+    "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
+    "test": "nyc mocha \"test/**/*.test.ts\"",
+    "doc": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"  && cp CHANGELOG.md ./docs",
+    "clean": "rm -rf renderedTemplates dist",
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
     "updateApis": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts updateApis",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "prepare": "snyk protect"
   },
   "publishConfig": {
     "access": "public"
@@ -158,15 +155,21 @@
     "@commerce-apps/raml-toolkit": "^0.4.2",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/gulp": "^4.0.6",
+    "@types/mocha": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.28.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "conditional-type-checks": "^1.0.5",
     "depcheck": "^0.9.2",
     "dotenv": "^8.2.0",
     "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-xo": "^0.32.0",
+    "eslint-config-xo-typescript": "^0.31.0",
+    "eslint-plugin-header": "^3.0.0",
     "eslint-plugin-jsdoc": "^25.4.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-tsdoc": "^0.2.4",
     "fs-extra": "^9.0.0",
     "gulp": "^4.0.2",
@@ -177,6 +180,7 @@
     "loglevel": "^1.6.8",
     "mocha": "^7.0.1",
     "nyc": "^15.0.0",
+    "prettier": "^2.0.5",
     "sinon": "^7.5.0",
     "snyk": "^1.320.5",
     "tmp": "^0.2.0",
@@ -188,7 +192,7 @@
   },
   "dependencies": {
     "@commerce-apps/core": "^1.4.5-beta.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "retry": "^0.12.0"
   },
   "snyk": true
