--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,12 @@ commands:
       - run: npm run test:ci
       - store_test_results:
           path: reports
+  integration-tests:
+    working_directory: ~/build_only/testIntegration
+    steps:
+      - run: npm run test:bundle
+      - store_test_results:
+          path: ../reports
 
 # EXECUTORS
 executors:
@@ -39,18 +45,21 @@ jobs:
     steps:
       - build
       - test
+      - integration-test
 
   build-node-12:
     executor: node-12
     steps:
       - build
       - test
+      - integration-test
 
   build-node-14:
     executor: node-14
     steps:
       - build
       - test
+      - integration-test
 
   publish:
     executor:
