Fixed circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ commands:
       - store_test_results:
           path: reports
   integration-tests:
-    working_directory: ~/build_only/testIntegration
     steps:
+      - run: cd testIntegration
       - run: npm run test:bundle
       - store_test_results:
           path: ../reports
