Updated package.json to fix dependencies

--- a/testIntegration/package.json
+++ b/testIntegration/package.json
@@ -8,7 +8,7 @@
     "depcheck": "depcheck",
     "lint": "npm run lint:dev -- --quiet",
     "lint:dev": "eslint . --ext .ts,.js --fix",
-    "pretest": "npm run lint",
+    "pretest": "npm run lint && depcheck",
     "test:ts": "mocha \"tests/**/*.test.ts\"",
     "test:js": "mocha \"tests/**/*.test.js\"",
     "test": "npm run test:ts && npm run test:js",
