Fixing circle config to run in the correct directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,8 @@ commands:
           path: reports
   test-integration:
     steps:
-      - run: cd testIntegration
+      - checkout:
+          path: testIntegration
       - run: npm run test:bundle
       - store_test_results:
           path: ../reports
