Tryign a different method to change the working directory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,9 @@ commands:
           path: reports
   test-integration:
     steps:
-      - checkout:
-          path: testIntegration
-      - run: npm run test:bundle
+      - run: |
+          cd testIntegration
+          npm run test:bundle
       - store_test_results:
           path: ../reports
 
