--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ commands:
           cd testIntegration
           npm run test:bundle
       - store_test_results:
-          path: ../reports
+          path: reports
 
 # EXECUTORS
 executors:
