--- a/testIntegration/package.json
+++ b/testIntegration/package.json
@@ -44,11 +44,10 @@
   },
   "devDependencies": {
     "@types/mocha": "^5.2.7",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
     "eslint-plugin-jsdoc": "^25.4.2",
     "eslint-plugin-tsdoc": "^0.2.4",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "depcheck": "^0.9.2",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
