--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "nyc mocha \"test/**/*.test.ts\"",
     "doc": "npm run doc:generate && npm run doc:resources",
     "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"",
-    "doc:resources": "cp CHANGELOG.md ./docs && cp -a images ./docs",
+    "doc:resources": "cp CHANGELOG.md ./docs",
     "clean": "rm -rf renderedTemplates dist",
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
     "updateApis": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts updateApis",
