--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,13 @@ commands:
       - run: npm run test:ci
       - store_test_results:
           path: reports
+  test-integration:
+    steps:
+      - run: |
+          cd testIntegration
+          npm run test:bundle
+      - store_test_results:
+          path: reports
 
 # EXECUTORS
 executors:
@@ -39,18 +46,21 @@ jobs:
     steps:
       - build
       - test
+      - test-integration
 
   build-node-12:
     executor: node-12
     steps:
       - build
       - test
+      - test-integration
 
   build-node-14:
     executor: node-14
     steps:
       - build
       - test
+      - test-integration
 
   publish:
     executor:
