--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint:dev": "eslint . --ext .ts --fix",
     "pretest": "npm run lint && npm run depcheck",
     "build": "npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
+    "prepack": "npm run build",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
     "test": "nyc mocha \"test/**/*.test.ts\"",
     "doc": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"  && cp CHANGELOG.md ./docs",
@@ -160,7 +161,6 @@
     "@typescript-eslint/parser": "^2.30.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "conditional-type-checks": "^1.0.5",
     "depcheck": "^0.9.2",
     "dotenv": "^8.2.0",
     "eslint": "^7.4.0",
