--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "prepack": "npm run build",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
     "test": "nyc mocha \"test/**/*.test.ts\"",
-    "doc": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"  && cp CHANGELOG.md ./docs",
+    "doc": "npm run doc:generate && npm run doc:resources",
+    "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"",
+    "doc:resources": "cp CHANGELOG.md ./docs",
     "clean": "rm -rf renderedTemplates dist",
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
     "updateApis": "gulp --gulpfile ./gulpfiles/downloadRamlsTask.ts updateApis",
