--- a/.depcheckrc.yml
+++ b/.depcheckrc.yml
@@ -1,16 +1,6 @@
 ignores:
-  [
-    '@types/chai',
-    'chai',
-    'depcheck',
-    'eslint*',
-    'gulp-typescript',
-    'mocha',
-    'nyc',
-    'prettier',
-    'tslib',
-    'typescript',
-    'typedoc-plugin-external-module-map',
-    'typedoc-plugin-nojekyll',
-    'utility-types',
-  ]
+  - gulp-typescript
+  # Unused and could be removed, but leaving because it could be helpful
+  - utility-types
+  - typedoc-plugin-external-module-map
+  - typedoc-plugin-nojekyll
