Add download staging script.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "renderTemplates": "gulp --gulpfile ./gulpfiles/renderTemplatesTask.ts renderTemplates",
     "backupApis": "rm -rf updateApisTmp && mkdir updateApisTmp && mv apis updateApisTmp/oldApis",
     "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis/api-config.json apis/api-config.json -o updateApisTmp/ramlDiff.json",
-    "downloadApis": "raml-toolkit download -s 'category:\"CC Visibility\" = \"External\"' -g \"CC API Family\" -D production --deployment-regex-flags=i",
+    "download": "raml-toolkit download -s 'category:\"CC Visibility\" = \"External\"' -g \"CC API Family\" --deployment-regex-flags=i",
+    "downloadApis": "npm run download -- -D production",
+    "downloadStaging": "npm run download -- -D staging -d testIntegration/stagingApis",
     "updateApis": "npm run backupApis && npm run downloadApis && npm run diffApis",
     "prepare": "snyk protect"
   },
