Download staging APIs when updating APIs.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "download": "raml-toolkit download -s 'category:\"CC Visibility\" = \"External\"' -g \"CC API Family\" --deployment-regex-flags=i",
     "downloadApis": "npm run download -- -D production",
     "downloadStaging": "npm run download -- -D staging -d testIntegration/stagingApis",
-    "updateApis": "npm run backupApis && npm run downloadApis && npm run diffApis",
+    "updateApis": "npm run downloadStaging && npm run backupApis && npm run downloadApis && npm run diffApis",
     "prepare": "snyk protect"
   },
   "publishConfig": {
