--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "npm run lint:dev -- --quiet",
     "lint:dev": "eslint . --ext .ts --fix",
     "pretest": "npm run lint && npm run depcheck",
-    "build": "npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
+    "build": "npm run clean && npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
     "prepack": "npm run build",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
     "test": "nyc mocha \"test/**/*.test.ts\"",
