Run integration tests for staging and production.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ commands:
     steps:
       - run: |
           cd testIntegration
-          npm run test:bundle
+          npm run test:ci
       - store_test_results:
           path: reports
 
