--- a/testIntegration/package.json
+++ b/testIntegration/package.json
@@ -43,9 +43,9 @@
     "colors": true
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "^5.2.7",
-    "eslint-plugin-jsdoc": "^25.4.2",
-    "eslint-plugin-tsdoc": "^0.2.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "depcheck": "^0.9.2",
@@ -54,9 +54,12 @@
     "eslint-config-xo": "^0.32.0",
     "eslint-config-xo-typescript": "^0.31.0",
     "eslint-plugin-header": "^3.0.0",
+    "eslint-plugin-jsdoc": "^25.4.2",
+    "eslint-plugin-tsdoc": "^0.2.4",
     "esm": "^3.2.25",
     "mocha": "^7.1.2",
     "nock": "^12.0.3",
-    "nyc": "^15.0.1"
+    "nyc": "^15.0.1",
+    "tsd": "^0.13.1"
   }
 }
