Move snyk to dependencies. Also npm audit fix.

--- a/package.json
+++ b/package.json
@@ -183,7 +183,6 @@
     "nyc": "^15.0.0",
     "prettier": "^2.0.5",
     "sinon": "^7.5.0",
-    "snyk": "^1.320.5",
     "tmp": "^0.2.0",
     "tslib": "^1.10.0",
     "typedoc": "^0.17.8",
@@ -194,7 +193,8 @@
   "dependencies": {
     "@commerce-apps/core": "^1.4.8-beta.0",
     "lodash": "^4.17.19",
-    "retry": "^0.12.0"
+    "retry": "^0.12.0",
+    "snyk": "^1.366.1"
   },
   "snyk": true
 }
