Update typescript to 3.9 (#255)

--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
     "typedoc": "^0.17.8",
     "typedoc-plugin-external-module-map": "^1.2.1",
     "typedoc-plugin-nojekyll": "^1.0.1",
+    "typescript": "^3.9.7",
     "utility-types": "^3.10.0"
   },
   "dependencies": {
