--- a/package.json
+++ b/package.json
@@ -185,7 +185,6 @@
     "mocha": "^7.0.1",
     "nyc": "^15.0.0",
     "prettier": "^2.0.5",
-    "snyk": "^1.320.5",
     "tmp": "^0.2.0",
     "tslib": "^1.10.0",
     "typedoc": "^0.17.8",
@@ -197,7 +196,8 @@
   "dependencies": {
     "@commerce-apps/core": "^1.4.8-beta.0",
     "lodash": "^4.17.19",
-    "retry": "^0.12.0"
+    "retry": "^0.12.0",
+    "snyk": "^1.366.1"
   },
   "snyk": true
 }
