Upgrades @commerce-apps/core to 1.4.10

--- a/package.json
+++ b/package.json
@@ -194,7 +194,7 @@
     "utility-types": "^3.10.0"
   },
   "dependencies": {
-    "@commerce-apps/core": "^1.4.8-beta.0",
+    "@commerce-apps/core": "^1.4.10",
     "lodash": "^4.17.19",
     "retry": "^0.12.0",
     "snyk": "^1.366.1"
