--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "npm run clean && npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
     "prepack": "npm run build",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
-    "test": "nyc mocha \"test/**/*.test.ts\"",
+    "test": "nyc mocha \"src/**/*.test.ts\"",
     "doc": "npm run doc:generate && npm run doc:resources",
     "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"",
     "doc:resources": "cp CHANGELOG.md ./docs",
@@ -40,6 +40,10 @@
     "extends": "@istanbuljs/nyc-config-typescript",
     "include": [
       "src/**/*.ts"
+    ],
+    "exclude": [
+      "src/generate.ts",
+      "src/updateApis.ts"
     ],
     "reporter": [
       "lcov",
@@ -156,17 +160,16 @@
   "license": "BSD-3-Clause",
   "gitHead": "2a6031f5f57c4ba5df8bfb5c4ca42b2631befe58",
   "devDependencies": {
-    "@commerce-apps/raml-toolkit": "^0.4.4",
+    "@commerce-apps/raml-toolkit": "^0.5.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/chai": "^4.2.12",
     "@types/fs-extra": "^9.0.1",
-    "@types/gulp": "^4.0.6",
     "@types/mocha": "^7.0.2",
+    "@types/sinon": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "depcheck": "^0.9.2",
-    "dotenv": "^8.2.0",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-header": "^3.0.0",
@@ -174,22 +177,16 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-tsdoc": "^0.2.4",
     "fs-extra": "^9.0.0",
-    "gulp": "^4.0.2",
-    "gulp-typescript": "^5.0.1",
     "handlebars-helpers": "^0.10.0",
     "lint-staged": "^10.1.3",
-    "loglevel": "^1.6.8",
     "mocha": "^7.0.1",
     "nyc": "^15.0.0",
     "prettier": "^2.0.5",
+    "sinon": "^9.0.3",
     "snyk": "^1.320.5",
-    "tmp": "^0.2.0",
     "tslib": "^1.10.0",
     "typedoc": "^0.17.8",
-    "typedoc-plugin-external-module-map": "^1.2.1",
-    "typedoc-plugin-nojekyll": "^1.0.1",
-    "typescript": "^3.9.7",
-    "utility-types": "^3.10.0"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "@commerce-apps/core": "^1.4.8-beta.0",
