--- a/package.json
+++ b/package.json
@@ -192,7 +192,8 @@
     "@commerce-apps/core": "^1.5.0",
     "lodash": "^4.17.19",
     "retry": "^0.12.0",
-    "snyk": "^1.366.1"
+    "snyk": "^1.366.1",
+    "typedoc-plugin-external-module-map": "^1.2.1"
   },
   "snyk": true
 }
