--- a/package.json
+++ b/package.json
@@ -186,14 +186,14 @@
     "snyk": "^1.320.5",
     "tslib": "^1.10.0",
     "typedoc": "^0.17.8",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "typedoc-plugin-external-module-map": "^1.2.1"
   },
   "dependencies": {
     "@commerce-apps/core": "^1.5.0",
     "lodash": "^4.17.19",
     "retry": "^0.12.0",
-    "snyk": "^1.366.1",
-    "typedoc-plugin-external-module-map": "^1.2.1"
+    "snyk": "^1.366.1"
   },
   "snyk": true
 }
