Added typedoc plugin and upgraded the core version (#261)
* Added missing typedoc plugin

* typedoc-plugin

* typedoc-plugin

* depcheck config file

* package-lock.json

--- a/package.json
+++ b/package.json
@@ -186,10 +186,11 @@
     "snyk": "^1.320.5",
     "tslib": "^1.10.0",
     "typedoc": "^0.17.8",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "typedoc-plugin-external-module-map": "^1.2.1"
   },
   "dependencies": {
-    "@commerce-apps/core": "^1.4.10",
+    "@commerce-apps/core": "^1.5.0",
     "lodash": "^4.17.19",
     "retry": "^0.12.0",
     "snyk": "^1.366.1"
