Add nojekyll plugin.

--- a/package.json
+++ b/package.json
@@ -186,8 +186,9 @@
     "snyk": "^1.320.5",
     "tslib": "^1.10.0",
     "typedoc": "^0.17.8",
-    "typescript": "^3.9.7",
-    "typedoc-plugin-external-module-map": "^1.2.1"
+    "typedoc-plugin-external-module-map": "^1.2.1",
+    "typedoc-plugin-nojekyll": "^1.0.1",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "@commerce-apps/core": "^1.5.0",
