--- a/.depcheckrc.yml
+++ b/.depcheckrc.yml
@@ -1,3 +1,4 @@
 ignores:
-  - typedoc-plugin-external-module-map
-
+  # Include a reason why each package is listed
+  - typedoc-plugin-external-module-map # Used by typedoc in `npm run doc`
+  - typedoc-plugin-nojekyll # Used by typedoc in `npm run doc`
