--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "depcheck": "depcheck",
     "lint": "npm run lint:dev -- --quiet",
-    "lint:dev": "eslint . --ext .ts --fix",
+    "lint:dev": "sort-package-json && eslint . --ext .ts --fix",
     "pretest": "npm run lint && npm run depcheck",
     "build": "npm run clean && npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
     "prepack": "npm run build",
@@ -184,6 +184,7 @@
     "prettier": "^2.0.5",
     "sinon": "^9.0.3",
     "snyk": "^1.320.5",
+    "sort-package-json": "^1.44.0",
     "tslib": "^1.10.0",
     "typedoc": "^0.17.8",
     "typedoc-plugin-external-module-map": "^1.2.1",
