--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "sinon": "^9.0.3",
     "snyk": "^1.320.5",
     "sort-package-json": "^1.44.0",
+    "ts-node": "^9.0.0",
     "tslib": "^1.10.0",
     "typedoc": "^0.17.8",
     "typedoc-plugin-external-module-map": "^1.2.1",
