Move tslib to main dependencies.

--- a/package.json
+++ b/package.json
@@ -159,7 +159,8 @@
     "@commerce-apps/core": "^1.5.0",
     "lodash": "^4.17.19",
     "retry": "^0.12.0",
-    "snyk": "^1.366.1"
+    "snyk": "^1.366.1",
+    "tslib": "^2.0.1"
   },
   "devDependencies": {
     "@commerce-apps/raml-toolkit": "^0.5.0",
@@ -188,7 +189,6 @@
     "snyk": "^1.320.5",
     "sort-package-json": "^1.44.0",
     "ts-node": "^9.0.0",
-    "tslib": "^1.10.0",
     "typedoc": "^0.17.8",
     "typedoc-plugin-external-module-map": "^1.2.1",
     "typedoc-plugin-nojekyll": "^1.0.1",
