--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.12",
     "@types/fs-extra": "^9.0.1",
+    "@types/handlebars-helpers": "^0.5.2",
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
