Warn on unused eslint-disable directives.

--- a/package.json
+++ b/package.json
@@ -115,7 +115,8 @@
           "@typescript-eslint/no-var-requires": "warn"
         }
       }
-    ]
+    ],
+    "reportUnusedDisableDirectives": true
   },
   "mocha": {
     "colors": true,
