Clean up package.json (#264)
* Add ts-node dev dependency

* Move tslib to main dependencies.

* Remove unused lint-staged.

* Add types for handlebars-helpers.

* Warn on unused eslint-disable directives.

--- a/package.json
+++ b/package.json
@@ -35,12 +35,6 @@
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
     "updateApis": "ts-node src/updateApis.ts"
   },
-  "lint-staged": {
-    "*.ts": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -121,7 +115,8 @@
           "@typescript-eslint/no-var-requires": "warn"
         }
       }
-    ]
+    ],
+    "reportUnusedDisableDirectives": true
   },
   "mocha": {
     "colors": true,
@@ -159,13 +154,15 @@
     "@commerce-apps/core": "^1.5.0",
     "lodash": "^4.17.19",
     "retry": "^0.12.0",
-    "snyk": "^1.366.1"
+    "snyk": "^1.366.1",
+    "tslib": "^2.0.1"
   },
   "devDependencies": {
     "@commerce-apps/raml-toolkit": "^0.5.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.12",
     "@types/fs-extra": "^9.0.1",
+    "@types/handlebars-helpers": "^0.5.2",
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
@@ -180,14 +177,13 @@
     "eslint-plugin-tsdoc": "^0.2.4",
     "fs-extra": "^9.0.0",
     "handlebars-helpers": "^0.10.0",
-    "lint-staged": "^10.1.3",
     "mocha": "^7.0.1",
     "nyc": "^15.0.0",
     "prettier": "^2.0.5",
     "sinon": "^9.0.3",
     "snyk": "^1.320.5",
     "sort-package-json": "^1.44.0",
-    "tslib": "^1.10.0",
+    "ts-node": "^9.0.0",
     "typedoc": "^0.17.8",
     "typedoc-plugin-external-module-map": "^1.2.1",
     "typedoc-plugin-nojekyll": "^1.0.1",
