--- a/base.tsconfig.json
+++ b/base.tsconfig.json
@@ -6,6 +6,7 @@
         "declaration": true,
         "sourceMap": true,
         "target": "ES6",
+        "lib": ["ES6"],
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames":true,
         "importHelpers": true,
