Change the diff output format to console

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "npm run clean && npm run renderTemplates && tsc && eslint dist --ext .ts,.js --quiet --fix",
     "clean": "rm -rf renderedTemplates dist",
     "depcheck": "depcheck",
-    "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -o updateApisTmp/ramlDiff.json",
+    "diffApis": "raml-toolkit diff --dir updateApisTmp/oldApis apis -f console -o updateApisTmp/ramlDiff.txt",
     "doc": "npm run doc:generate && npm run doc:resources",
     "doc:generate": "typedoc --mode modules --out ./docs renderedTemplates/** --tsconfig tsconfig.json --external-modulemap  \".*/renderedTemplates/([\\w\\-_]+)/\"",
     "doc:resources": "cp CHANGELOG.md ./docs",
