Add setup.ts to testIntegration

--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
     "updateApis": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis"
   },
+  "mocha": {
+    "file": [
+      "testResources/setup.ts"
+    ]
+  },
   "dependencies": {
     "@commerce-apps/core": "^1.5.0",
     "lodash": "^4.17.20",
