--- a/testIntegration/package.json
+++ b/testIntegration/package.json
@@ -26,6 +26,9 @@
     "commerce-sdk": "file:./commerce-sdk.tgz"
   },
   "mocha": {
+    "file": [
+      "tests/setup.ts"
+    ],
     "require": [
       "esm"
     ],
@@ -42,6 +45,7 @@
     "esm": "^3.2.25",
     "mocha": "^7.1.2",
     "nock": "^12.0.3",
+    "sinon": "^9.2.1",
     "tsd": "^0.13.1"
   }
 }
