--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prepare": "snyk protect",
     "renderTemplates": "ts-node src/generate.ts",
     "pretest": "npm run lint && npm run depcheck",
-    "test": "nyc mocha \"src/**/*.test.ts\"",
+    "test": "snyk test && nyc mocha \"src/**/*.test.ts\"",
     "test:ci": "npm test -- --reporter=xunit --reporter-options output=./reports/generator.xml",
     "updateApis": "npm run backupApis && ts-node src/updateApis.ts && npm run diffApis"
   },
@@ -45,7 +45,7 @@
     "@commerce-apps/core": "^1.5.1",
     "lodash": "^4.17.21",
     "retry": "^0.12.0",
-    "snyk": "^1.459.0",
+    "snyk": "^1.491.0",
     "tslib": "^2.1.0"
   },
   "devDependencies": {
