--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ executors:
   node-16:
     <<: *defaults
     docker:
-      - image: circleci/node:16.1.0
+      - image: cimg/node:16.1.0
 # JOBS
 jobs:
   build-node-10:
