--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,15 +29,15 @@ executors:
   node-10:
     <<: *defaults
     docker:
-      - image: circleci/node:10.20.1
+      - image: cimg/node:10.20.1
   node-12:
     <<: *defaults
     docker:
-      - image: circleci/node:12.16.3
+      - image: cimg/node:12.16.3
   node-14:
     <<: *defaults
     docker:
-      - image: circleci/node:14.2.0
+      - image: cimg/node:14.2.0
   node-16:
     <<: *defaults
     docker:
