--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,16 +29,19 @@ executors:
   node-10:
     <<: *defaults
     docker:
-      - image: circleci/node:10.20.1
+      - image: cimg/node:10.24.1
   node-12:
     <<: *defaults
     docker:
-      - image: circleci/node:12.16.3
+      - image: cimg/node:12.22.1
   node-14:
     <<: *defaults
     docker:
-      - image: circleci/node:14.2.0
-
+      - image: cimg/node:14.17.0
+  node-16:
+    <<: *defaults
+    docker:
+      - image: cimg/node:16.1.0
 # JOBS
 jobs:
   build-node-10:
@@ -57,6 +60,13 @@ jobs:
 
   build-node-14:
     executor: node-14
+    steps:
+      - build
+      - test
+      - test-integration
+
+  build-node-16:
+    executor: node-16
     steps:
       - build
       - test
@@ -91,6 +101,10 @@ workflows:
           filters:
             tags:
               ignore: /^v.*/
+      - build-node-16:
+          filters:
+            tags:
+              ignore: /^v.*/
 
   build-test-deploy:
     jobs:
@@ -112,6 +126,12 @@ workflows:
               only: /^v.*/
             branches:
               ignore: /.*/
+      - build-node-16:
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
       - confirm-publish-if-tagged:
           filters:
             tags:
@@ -123,6 +143,7 @@ workflows:
             - build-node-10
             - build-node-12
             - build-node-14
+            - build-node-16
       - publish:
           filters:
             tags:
