--- a/package.json
+++ b/package.json
@@ -42,42 +42,44 @@
     ]
   },
   "dependencies": {
-    "@commerce-apps/core": "^1.5.2",
+    "@commerce-apps/core": "^1.5.3",
     "lodash": "^4.17.21",
     "retry": "^0.12.0",
     "snyk": "^1.522.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@commerce-apps/raml-toolkit": "^0.5.7",
+    "@commerce-apps/raml-toolkit": "^0.5.10",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.2.12",
-    "@types/fs-extra": "^9.0.1",
-    "@types/handlebars-helpers": "^0.5.2",
-    "@types/mocha": "^7.0.2",
-    "@types/sinon": "^9.0.4",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "chai": "^4.2.0",
+    "@types/chai": "^4.2.21",
+    "@types/fs-extra": "^9.0.12",
+    "@types/handlebars-helpers": "^0.5.3",
+    "@types/lodash": "^4.14.171",
+    "@types/mocha": "^8.2.3",
+    "@types/retry": "^0.12.1",
+    "@types/sinon": "^9.0.11",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "chai": "^4.3.4",
     "depcheck": "^0.9.2",
-    "eslint": "^7.4.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-header": "^3.0.0",
-    "eslint-plugin-jsdoc": "^25.4.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-tsdoc": "^0.2.4",
-    "fs-extra": "^9.0.0",
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-jsdoc": "^25.4.3",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
+    "fs-extra": "^9.1.0",
     "handlebars-helpers": "^0.10.0",
-    "mocha": "^8.2.1",
-    "nyc": "^15.0.0",
-    "prettier": "^2.0.5",
-    "sinon": "^9.0.3",
-    "sort-package-json": "^1.44.0",
-    "ts-node": "^9.0.0",
+    "mocha": "^8.4.0",
+    "nyc": "^15.1.0",
+    "prettier": "^2.3.2",
+    "sinon": "^9.2.4",
+    "sort-package-json": "^1.50.0",
+    "ts-node": "^9.1.1",
     "typedoc": "^0.17.8",
     "typedoc-plugin-external-module-map": "^1.2.1",
     "typedoc-plugin-nojekyll": "^1.0.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.10"
   },
   "publishConfig": {
     "access": "public"
