--- a/testIntegration/package.json
+++ b/testIntegration/package.json
@@ -37,12 +37,14 @@
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.3",
+    "@types/fs-extra": "^9.0.12",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "depcheck": "^0.9.2",
     "eslint": "^7.4.0",
     "esm": "^3.2.25",
+    "fs-extra": "^9.1.0",
     "mocha": "^7.1.2",
     "nock": "^12.0.3",
     "sinon": "^9.2.1",
