--- a/testIntegration/package.json
+++ b/testIntegration/package.json
@@ -35,6 +35,7 @@
     "colors": true
   },
   "devDependencies": {
+    "@babel/parser": "^7.16.4",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.3",
     "@types/fs-extra": "^9.0.12",
