updated the doc links

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "commerce-sdk",
   "version": "2.7.0",
   "description": "Salesforce Commerce Cloud SDK",
-  "homepage": "https://developer.commercecloud.com/s/",
+  "homepage": "https://developer.salesforce.com/developer-centers/commerce-cloud",
   "repository": {
     "type": "git",
     "url": "https://github.com/SalesforceCommerceCloud/commerce-sdk"
