Added testIntegration package.json homepage

--- a/testIntegration/package.json
+++ b/testIntegration/package.json
@@ -2,7 +2,7 @@
   "name": "commerce-sdk-integration-test",
   "version": "1.4.4-beta.0",
   "description": "Salesforce Commerce Cloud SDK Integration Test",
-  "homepage": "https://developer.commercecloud.com/s/",
+  "homepage": "https://developer.salesforce.com/developer-centers/commerce-cloud",
   "private": true,
   "scripts": {
     "depcheck": "depcheck",
