Cast response to TokenResponse

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -77,6 +77,14 @@
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-var-requires": "warn"
       }
+    },
+    {
+      "files": [
+        "examples/**"
+      ],
+      "rules": {
+        "@typescript-eslint/camelcase": "warn"
+      }
     }
   ],
   "reportUnusedDisableDirectives": true
