Add nock for testing

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "fs-extra": "^9.1.0",
     "handlebars-helpers": "^0.10.0",
     "mocha": "^8.4.0",
+    "nock": "^13.2.2",
     "nyc": "^15.1.0",
     "prettier": "^2.5.1",
     "sinon": "^9.2.4",
