--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/handlebars-helpers": "^0.5.3",
     "@types/lodash": "^4.14.178",
     "@types/mocha": "^8.2.3",
+    "@types/node-fetch": "^2.5.12",
     "@types/retry": "^0.12.1",
     "@types/sinon": "^9.0.11",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
