--- a/.depcheckrc.yml
+++ b/.depcheckrc.yml
@@ -2,3 +2,4 @@ ignores:
   # Include a reason why each package is listed
   - typedoc-plugin-external-module-map # Used by typedoc in `npm run doc`
   - typedoc-plugin-nojekyll # Used by typedoc in `npm run doc`
+  - node-fetch # We only use @types/node-fetch, not node-fetch itself
