Attempt to fix CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ jobs:
     executor: node-16
     steps:
       - build
+      - run: curl -k https://git.soma.salesforce.com/pages/nodeforce/nexus-npms/dist/installer.js | node
       - test
       - test-integration
 
