--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     ]
   },
   "dependencies": {
-    "@commerce-apps/core": "^1.6.0",
+    "@commerce-apps/core": "^1.5.5",
     "lodash": "^4.17.21",
     "retry": "^0.12.0",
     "tslib": "^2.3.1"
@@ -70,6 +70,7 @@
     "fs-extra": "^9.1.0",
     "handlebars-helpers": "^0.10.0",
     "mocha": "^8.4.0",
+    "nock": "^13.2.4",
     "nyc": "^15.1.0",
     "prettier": "^2.5.1",
     "sinon": "^9.2.4",
