--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@typescript-eslint/parser": "^2.34.0",
     "chai": "^4.3.5",
     "depcheck": "^0.9.2",
-    "eslint": "^7.32.0",
+    "eslint": "8.16.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-jsdoc": "^25.4.3",
@@ -70,7 +70,6 @@
     "fs-extra": "^9.1.0",
     "handlebars-helpers": "^0.10.0",
     "mocha": "^8.4.0",
-    "nock": "^13.2.4",
     "nyc": "^15.1.0",
     "prettier": "^2.5.1",
     "sinon": "^9.2.4",
