--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     ]
   },
   "dependencies": {
-    "@commerce-apps/core": "1.5.5",
+    "@commerce-apps/core": "^1.5.5",
     "lodash": "^4.17.21",
     "retry": "^0.12.0",
     "tslib": "^2.3.1"
@@ -61,7 +61,7 @@
     "@typescript-eslint/parser": "^2.34.0",
     "chai": "^4.3.5",
     "depcheck": "^0.9.2",
-    "eslint": "8.16.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-jsdoc": "^25.4.3",
