--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,8 @@ jobs:
       #   with:
       #     path: "**/node_modules"
       #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
-
-      - run: npm install  --network-timeout 600000
+      # - run: npm install  --network-timeout 600000
         # if: ${{ steps.cache-nodemodules.outputs.cache-hit != 'true' }}
+      - run: npm install
       - run: npm run build
       - run: npm test
