--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,6 @@ jobs:
       #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
       # - run: npm install  --network-timeout 600000
         # if: ${{ steps.cache-nodemodules.outputs.cache-hit != 'true' }}
-      - run: npm install
+      - run: npm install --legacy-peer-deps
       - run: npm run build
       - run: npm test
