--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,3 +33,27 @@ jobs:
       - run: npm install --legacy-peer-deps
       - run: npm run build
       - run: npm test
+  windows-unit-tests:
+    strategy:
+      matrix:
+        # node_version: [lts/-1, lts/*, latest]
+        node: [10, 12, 14, 16]
+      fail-fast: false
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node_version }}
+          cache: npm
+      # - name: Cache node modules
+      #   id: cache-nodemodules
+      #   uses: actions/cache@v3
+      #   env:
+      #     cache-name: cache-node-modules
+      #   with:
+      #     path: "**/node_modules"
+      #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
+      - run: npm install --legacy-peer-deps
+      - run: npm run build
+      - run: npm test
