change name of linux integration tests

--- a/.github/workflows/integrationTest.yml
+++ b/.github/workflows/integrationTest.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  linux-unit-tests:
+  linux-integration-tests:
     strategy:
       matrix:
         node: [10, 12, 14, 16]
