modify test cmd

--- a/.github/workflows/integrationTest.yml
+++ b/.github/workflows/integrationTest.yml
@@ -23,4 +23,4 @@ jobs:
       - run: npm install --legacy-peer-deps
       - run: npm run build
       - run: cd testIntegration
-      - run: npm test:ci
+      - run: npm run test:ci
