--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,8 +10,6 @@ jobs:
     strategy:
       matrix:
         node: [10, 12, 14, 16]
-        # node_version: [lts/-1, lts/*, latest]
-        # node_version: [lts/-1, lts/*]
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
@@ -20,40 +18,27 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
           cache: npm
-      # - name: Cache node modules
-      #   id: cache-nodemodules
-      #   uses: actions/cache@v3
-      #   env:
-      #     cache-name: cache-node-modules
-      #   with:
-      #     path: "**/node_modules"
-      #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
-      # - run: npm install  --network-timeout 600000
-        # if: ${{ steps.cache-nodemodules.outputs.cache-hit != 'true' }}
-      - run: npm install --legacy-peer-deps
-      - run: npm run build
-      - run: npm test
-  windows-unit-tests:
-    strategy:
-      matrix:
-        # node_version: [lts/-1, lts/*, latest]
-        node: [10, 12, 14, 16]
-      fail-fast: false
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Cache node modules
+        id: cache-nodemodules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
         with:
-          node-version: ${{ matrix.node_version }}
-          cache: npm
-      # - name: Cache node modules
-      #   id: cache-nodemodules
-      #   uses: actions/cache@v3
-      #   env:
-      #     cache-name: cache-node-modules
-      #   with:
-      #     path: "**/node_modules"
-      #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
+          path: "**/node_modules"
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/yarn.lock') }}
+      - name: send message to slack
+        id: slack
+        uses: slackapi/slack-github-action@v1.23.0
+        with:
+          # For posting a rich message using Block Kit
+          payload: |
+            {
+              "text": "testing from GH actions",
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
       - run: npm install --legacy-peer-deps
+        if: ${{ steps.cache-nodemodules.outputs.cache-hit != 'true' }}
       - run: npm run build
       - run: npm test
