try new payload

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,16 @@ jobs:
           # For posting a rich message using Block Kit
           payload: |
             {
-              "text": "testing from GH actions",
+              "text": "Testing sending slack notifications from GH actions",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "testing testing testing"
+                  }
+                }
+              ]
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
